# deep_learning_with_python

./: .gitignore  README.md  chapter_1.ipynb  deep_learning_with_python.ipynb  pyproject.toml
book_downloads/: binary_2gram.keras  chapter04_getting-started-with-neural-networks.ipynb  chapter05_fundamentals-of-ml.ipynb  chapter06.md  chapter07_working-with-keras.ipynb  chapter08_intro-to-dl-for-computer-vision.ipynb  chapter10_dl-for-timeseries.ipynb  chapter11_part01_introduction.ipynb  chapter11_part02_sequence-models.ipynb  checkpoint_path.keras  jena_conv.keras  jena_lstm.keras  jena_lstm_dropout.keras  jena_stacked_gru_dropout.keras  tfidf_2gram.keras
book_downloads/train/: events.out.tfevents.1746308946.thinkpad.77054.0.v2
book_downloads/validation/: events.out.tfevents.1746308963.thinkpad.77054.1.v2
