[project]
name = "deep-learning-with-python"
version = "0.1.0"
description = "This is a project to explore deep learning with Keras and Tensorflow"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "keras>=3.9.2",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pydot>=3.0.4",
    "scikit-learn>=1.6.1",
]
